# AlignLab

./: CONTRIBUTE.MD  INSTALL.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: branch-name-check.yml
benchmarks/: bbq.yaml  harmbench.yaml  jailbreakbench.yaml  realtoxicityprompts.yaml  truthfulqa.yaml
examples/: full_demo.py  quickstart.py
